RESOLVED FIXED267597
[WGSL] shader,execution,shadow:loop:* is failing
https://bugs.webkit.org/show_bug.cgi?id=267597
Summary [WGSL] shader,execution,shadow:loop:* is failing
Tadeu Zagallo
Reported 2024-01-16 11:10:59 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-16 11:11:30 PST
Tadeu Zagallo
Comment 2 2024-01-16 11:12:26 PST
EWS
Comment 3 2024-01-17 10:26:13 PST
Committed 273131@main (4b1d222feba2): <https://commits.webkit.org/273131@main> Reviewed commits have been landed. Closing PR #22829 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.