[WGSL] shader,execution,shadow:loop:* is failing https://bugs.webkit.org/show_bug.cgi?id=267597 rdar://121064194

Reviewed by Mike Wyrzykowski.

We were missing scopes for loop and continuing blocks in the name mangling pass.

* Source/WebGPU/WGSL/MangleNames.cpp:
(WGSL::NameManglerVisitor::visit):

Canonical link: https://commits.webkit.org/273131@main